sdl3/packages/include_C/fertig/SDL_stdinc.h

# define SDL_SIZE_MAX SIZE_MAX
# define SDL_SIZE_MAX ((size_t) -1)
/**
 *  The number of elements in an array.
 */
#define SDL_arraysize(array)    (sizeof(array)/sizeof(array[0]))
#define SDL_TABLESIZE(table)    SDL_arraysize(table)
/**
 *  \name Basic data types
 */
/* @{ */

/**
 * A boolean type.
 */
#define SDL_FALSE 0
#define SDL_TRUE 1
/**
 * A signed 8-bit integer type.
 */
#define SDL_MAX_SINT8   ((Sint8)0x7F)           /* 127 */
#define SDL_MIN_SINT8   ((Sint8)(~0x7F))        /* -128 */
typedef int8_t Sint8;
/**
 * An unsigned 8-bit integer type.
 */
#define SDL_MAX_UINT8   ((Uint8)0xFF)           /* 255 */
#define SDL_MIN_UINT8   ((Uint8)0x00)           /* 0 */
typedef uint8_t Uint8;
/**
 * A signed 16-bit integer type.
 */
#define SDL_MAX_SINT16  ((Sint16)0x7FFF)        /* 32767 */
#define SDL_MIN_SINT16  ((Sint16)(~0x7FFF))     /* -32768 */
typedef int16_t Sint16;
/**
 * An unsigned 16-bit integer type.
 */
#define SDL_MAX_UINT16  ((Uint16)0xFFFF)        /* 65535 */
#define SDL_MIN_UINT16  ((Uint16)0x0000)        /* 0 */
typedef uint16_t Uint16;
/**
 * A signed 32-bit integer type.
 */
#define SDL_MAX_SINT32  ((Sint32)0x7FFFFFFF)    /* 2147483647 */
#define SDL_MIN_SINT32  ((Sint32)(~0x7FFFFFFF)) /* -2147483648 */
typedef int32_t Sint32;
/**
 * An unsigned 32-bit integer type.
 */
#define SDL_MAX_UINT32  ((Uint32)0xFFFFFFFFu)   /* 4294967295 */
#define SDL_MIN_UINT32  ((Uint32)0x00000000)    /* 0 */
typedef uint32_t Uint32;
/**
 * A signed 64-bit integer type.
 */
#define SDL_MAX_SINT64  ((Sint64)0x7FFFFFFFFFFFFFFFll)      /* 9223372036854775807 */
#define SDL_MIN_SINT64  ((Sint64)(~0x7FFFFFFFFFFFFFFFll))   /* -9223372036854775808 */
typedef int64_t Sint64;
/**
 * An unsigned 64-bit integer type.
 */
#define SDL_MAX_UINT64  ((Uint64)0xFFFFFFFFFFFFFFFFull)     /* 18446744073709551615 */
#define SDL_MIN_UINT64  ((Uint64)(0x0000000000000000ull))   /* 0 */
typedef uint64_t Uint64;
/* @} *//* Basic data types */

/**
 *  \name Floating-point constants
 */
/* @{ */

//#ifdef FLT_EPSILON
//#define SDL_FLT_EPSILON FLT_EPSILON
//#else
#define SDL_FLT_EPSILON 1.1920928955078125e-07 /* 0x0.000002p0 */
#define SDL_PRIs64 PRIs64
#define SDL_PRIs64 "I64d"
#define SDL_PRIs64 "ld"
#define SDL_PRIs64 "lld"
#define SDL_PRIu64 PRIu64
#define SDL_PRIu64 "I64u"
#define SDL_PRIu64 "lu"
#define SDL_PRIu64 "llu"
#define SDL_PRIx64 PRIx64
#define SDL_PRIx64 "I64x"
#define SDL_PRIx64 "lx"
#define SDL_PRIx64 "llx"
#define SDL_PRIs32 PRId32
#define SDL_PRIs32 "d"
#define SDL_PRIu32 PRIu32
#define SDL_PRIu32 "u"
#define SDL_PRIx32 PRIx32
#define SDL_PRIx32 "x"
/** \endcond */

/* Check to make sure enums are the size of ints, for structure packing.
   For both Watcom C/C++ and Borland C/C++ the compiler option that makes
   enums having the size of an int must be enabled.
   This is "-b" for Borland C/C++ and "-ei" for Watcom C/C++ (v11).
*/

/** \cond */
//#ifndef DOXYGEN_SHOULD_IGNORE_THIS
//#if !defined(SDL_PLATFORM_ANDROID) && !defined(SDL_PLATFORM_VITA) && !defined(SDL_PLATFORM_3DS)
   /* TODO: include/SDL_stdinc.h:174: error: size of array 'SDL_dummy_enum' is negative */
typedef enum
{
    DUMMY_ENUM_VALUE
} SDL_DUMMY_ENUM;
extern   void * SDL_malloc(size_t size);
extern   void * SDL_calloc(size_t nmemb, size_t size);
extern   void * SDL_realloc(void *mem, size_t size);
extern  void  SDL_free(void *mem);
typedef void *( *SDL_malloc_func)(size_t size);
typedef void *( *SDL_calloc_func)(size_t nmemb, size_t size);
typedef void *( *SDL_realloc_func)(void *mem, size_t size);
typedef void ( *SDL_free_func)(void *mem);
/**
 * Get the original set of SDL memory functions
 *
 * \param malloc_func filled with malloc function
 * \param calloc_func filled with calloc function
 * \param realloc_func filled with realloc function
 * \param free_func filled with free function
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  void  SDL_GetOriginalMemoryFunctions(SDL_malloc_func *malloc_func,
                                                            SDL_calloc_func *calloc_func,
                                                            SDL_realloc_func *realloc_func,
                                                            SDL_free_func *free_func);
/**
 * Get the current set of SDL memory functions
 *
 * \param malloc_func filled with malloc function
 * \param calloc_func filled with calloc function
 * \param realloc_func filled with realloc function
 * \param free_func filled with free function
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  void  SDL_GetMemoryFunctions(SDL_malloc_func *malloc_func,
                                                    SDL_calloc_func *calloc_func,
                                                    SDL_realloc_func *realloc_func,
                                                    SDL_free_func *free_func);
/**
 * Replace SDL's memory allocation functions with a custom set
 *
 * \param malloc_func custom malloc function
 * \param calloc_func custom calloc function
 * \param realloc_func custom realloc function
 * \param free_func custom free function
 * \returns 0 on success or a negative error code on failure; call
 *          SDL_GetError() for more information.
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  int  SDL_SetMemoryFunctions(SDL_malloc_func malloc_func,
                                                   SDL_calloc_func calloc_func,
                                                   SDL_realloc_func realloc_func,
                                                   SDL_free_func free_func);
/**
 * Allocate memory aligned to a specific value
 *
 * If `alignment` is less than the size of `void *`, then it will be increased
 * to match that.
 *
 * The returned memory address will be a multiple of the alignment value, and
 * the amount of memory allocated will be a multiple of the alignment value.
 *
 * The memory returned by this function must be freed with SDL_aligned_free()
 *
 * \param alignment the alignment requested
 * \param size the size to allocate
 * \returns a pointer to the aligned memory
 *
 * \since This function is available since SDL 3.0.0.
 *
 * \sa SDL_aligned_free
 */
extern void * SDL_aligned_alloc(size_t alignment, size_t size);
/**
 * Free memory allocated by SDL_aligned_alloc()
 *
 * \since This function is available since SDL 3.0.0.
 *
 * \sa SDL_aligned_alloc
 */
extern  void  SDL_aligned_free(void *mem);
/**
 * Get the number of outstanding (unfreed) allocations
 *
 * \returns the number of allocations
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  int  SDL_GetNumAllocations(void);
extern  char * SDL_getenv(const char *name);
extern  int  SDL_setenv(const char *name, const char *value, int overwrite);
extern  void  SDL_qsort(void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
extern  void *  SDL_bsearch(const void *key, const void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
extern  int  SDL_abs(int x);
/* NOTE: these double-evaluate their arguments, so you should never have side effects in the parameters */
#define SDL_min(x, y) (((x) < (y)) ? (x) : (y))
#define SDL_max(x, y) (((x) > (y)) ? (x) : (y))
#define SDL_clamp(x, a, b) (((x) < (a)) ? (a) : (((x) > (b)) ? (b) : (x)))
extern  int  SDL_isalpha(int x);
extern  int  SDL_isalnum(int x);
extern  int  SDL_isblank(int x);
extern  int  SDL_iscntrl(int x);
extern  int  SDL_isdigit(int x);
extern  int  SDL_isxdigit(int x);
extern  int  SDL_ispunct(int x);
extern  int  SDL_isspace(int x);
extern  int  SDL_isupper(int x);
extern  int  SDL_islower(int x);
extern  int  SDL_isprint(int x);
extern  int  SDL_isgraph(int x);
extern  int  SDL_toupper(int x);
extern  int  SDL_tolower(int x);
extern  Uint16  SDL_crc16(Uint16 crc, const void *data, size_t len);
extern  Uint32  SDL_crc32(Uint32 crc, const void *data, size_t len);
extern  void * SDL_memcpy( void *dst, const void *src, size_t len);
#define SDL_memcpy  memcpy
//#define SDL_copyp(dst, src)                                                                 \
//    { SDL_COMPILE_TIME_ASSERT(SDL_copyp, sizeof (*(dst)) == sizeof (*(src))); }             \
//    SDL_memcpy((dst), (src), sizeof(*(src)))

extern  void * SDL_memmove( void *dst,  const void *src, size_t len);
#define SDL_memmove memmove
extern  void * SDL_memset( void *dst, int c, size_t len);
extern  void * SDL_memset4(void *dst, Uint32 val, size_t dwords);
#define SDL_memset  memset
extern  int  SDL_memcmp(const void *s1, const void *s2, size_t len);
extern  size_t  SDL_wcslen(const wchar_t *wstr);
extern  size_t  SDL_wcsnlen(const wchar_t *wstr, size_t maxlen);
extern  size_t  SDL_wcslcpy( wchar_t *dst, const wchar_t *src, size_t maxlen);
extern  size_t  SDL_wcslcat(wchar_t *dst, const wchar_t *src, size_t maxlen);
extern  wchar_t * SDL_wcsdup(const wchar_t *wstr);
extern  wchar_t * SDL_wcsstr(const wchar_t *haystack, const wchar_t *needle);
extern  wchar_t * SDL_wcsnstr(const wchar_t *haystack, const wchar_t *needle, size_t maxlen);
extern  int  SDL_wcscmp(const wchar_t *str1, const wchar_t *str2);
extern  int  SDL_wcsncmp(const wchar_t *str1, const wchar_t *str2, size_t maxlen);
extern  int  SDL_wcscasecmp(const wchar_t *str1, const wchar_t *str2);
extern  int  SDL_wcsncasecmp(const wchar_t *str1, const wchar_t *str2, size_t len);
extern  long  SDL_wcstol(const wchar_t *str, wchar_t **endp, int base);
extern  size_t  SDL_strlen(const char *str);
extern  size_t  SDL_strnlen(const char *str, size_t maxlen);
extern  size_t  SDL_strlcpy( char *dst, const char *src, size_t maxlen);
extern  size_t  SDL_utf8strlcpy( char *dst, const char *src, size_t dst_bytes);
extern  size_t  SDL_strlcat(char *dst, const char *src, size_t maxlen);
extern   char * SDL_strdup(const char *str);
extern   char * SDL_strndup(const char *str, size_t maxlen);
extern  char * SDL_strrev(char *str);
extern  char * SDL_strupr(char *str);
extern  char * SDL_strlwr(char *str);
extern  char * SDL_strchr(const char *str, int c);
extern  char * SDL_strrchr(const char *str, int c);
extern  char * SDL_strstr(const char *haystack, const char *needle);
extern  char * SDL_strnstr(const char *haystack, const char *needle, size_t maxlen);
extern  char * SDL_strcasestr(const char *haystack, const char *needle);
extern  char * SDL_strtok_r(char *s1, const char *s2, char **saveptr);
extern  size_t  SDL_utf8strlen(const char *str);
extern  size_t  SDL_utf8strnlen(const char *str, size_t bytes);
extern  char * SDL_itoa(int value, char *str, int radix);
extern  char * SDL_uitoa(unsigned int value, char *str, int radix);
extern  char * SDL_ltoa(long value, char *str, int radix);
extern  char * SDL_ultoa(unsigned long value, char *str, int radix);
extern  char * SDL_lltoa(Sint64 value, char *str, int radix);
extern  char * SDL_ulltoa(Uint64 value, char *str, int radix);
extern  int  SDL_atoi(const char *str);
extern  double  SDL_atof(const char *str);
extern  long  SDL_strtol(const char *str, char **endp, int base);
extern  unsigned long  SDL_strtoul(const char *str, char **endp, int base);
extern  Sint64  SDL_strtoll(const char *str, char **endp, int base);
extern  Uint64  SDL_strtoull(const char *str, char **endp, int base);
extern  double  SDL_strtod(const char *str, char **endp);
extern  int  SDL_strcmp(const char *str1, const char *str2);
extern  int  SDL_strncmp(const char *str1, const char *str2, size_t maxlen);
extern  int  SDL_strcasecmp(const char *str1, const char *str2);
extern  int  SDL_strncasecmp(const char *str1, const char *str2, size_t len);
extern  int  SDL_sscanf(const char *text, const char *fmt, ...) ;
extern  int  SDL_vsscanf(const char *text,  const char *fmt, va_list ap) ;
extern  int  SDL_snprintf( char *text, size_t maxlen,  const char *fmt, ... );
extern  int  SDL_swprintf( wchar_t *text, size_t maxlen,  const wchar_t *fmt, ... ) ;
extern  int  SDL_vsnprintf( char *text, size_t maxlen,  const char *fmt, va_list ap) ;
extern  int  SDL_vswprintf( wchar_t *text, size_t maxlen, const wchar_t *fmt, va_list ap);
extern  int  SDL_asprintf(char **strp,  const char *fmt, ...);
extern  int  SDL_vasprintf(char **strp,  const char *fmt, va_list ap) ;
#define SDL_PI_D   3.141592653589793238462643383279502884       /**< pi (double) */
#define SDL_PI_F   3.141592653589793238462643383279502884      /**< pi (float) */
#define SDL_malloc malloc
#define SDL_calloc calloc
#define SDL_realloc realloc
#define SDL_free free
#define SDL_memcpy memcpy
#define SDL_memmove memmove
#define SDL_memset memset
#define SDL_memcmp memcmp
#define SDL_strlcpy strlcpy
#define SDL_strlcat strlcat
#define SDL_strlen strlen
#define SDL_wcslen wcslen
#define SDL_wcslcpy wcslcpy
#define SDL_wcslcat wcslcat
#define SDL_strdup strdup
#define SDL_wcsdup wcsdup
#define SDL_strchr strchr
#define SDL_strrchr strrchr
#define SDL_strstr strstr
#define SDL_wcsstr wcsstr
#define SDL_strtok_r strtok_r
#define SDL_strcmp strcmp
#define SDL_wcscmp wcscmp
#define SDL_strncmp strncmp
#define SDL_wcsncmp wcsncmp
#define SDL_strcasecmp strcasecmp
#define SDL_strncasecmp strncasecmp
#define SDL_sscanf sscanf
#define SDL_vsscanf vsscanf
#define SDL_snprintf snprintf
#define SDL_vsnprintf vsnprintf